syntax = "proto3";

package graplinc.grapl.api.org_management.v1beta1;

import "graplinc/common/v1beta1/types.proto";

message CreateOrgRequest {
  string org_display_name = 1;
  string admin_username = 2;
  string admin_email = 3;
  bytes admin_password = 4;
  bool should_reset_password = 5;
}

message CreateOrgResponse {

}

message CreateUserRequest {
  graplinc.common.v1beta1.Uuid organization_id = 1; // this needs to be a UUID, but we don't know how to handle that rn, see unresolved ?s
  string name = 2;
  string email = 3;
  bytes password = 4;
}

message CreateUserResponse {

}

message ChangePasswordRequest {
  graplinc.common.v1beta1.Uuid organization_id = 1;
  graplinc.common.v1beta1.Uuid user_id = 2;
  bytes old_password = 3;
  bytes new_password = 4;
}

message ChangePasswordResponse {

}

service OrganizationManagementService {
  rpc CreateOrg (CreateOrgRequest) returns (CreateOrgResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
}

